<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ImageView
        android:id="@+id/login_Logo_Iv"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/ic_money_32"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/login_Info_Tv"
        android:layout_width="192dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/logInTitle"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_Logo_Iv" />


    <EditText
        android:id="@+id/logInimeEt"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/border_large"
        android:hint="@string/logInEnterName"
        android:inputType="text"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_Info_Tv" />

    <EditText
        android:id="@+id/logInprezimeEt"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/border_large"
        android:hint="@string/logInEnterLastName"
        android:inputType="text"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logInimeEt" />

    <EditText
        android:id="@+id/logInbankaEt"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/border_large"
        android:hint="@string/logInEnterBank"
        android:inputType="text"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logInprezimeEt" />

    <EditText
        android:id="@+id/logInsiftaEt"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/border_large"
        android:hint="@string/logInEnterPassword"
        android:inputType="numberPassword"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logInbankaEt" />

    <Button
        android:id="@+id/logInBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logInButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logInsiftaEt" />

</androidx.constraintlayout.widget.ConstraintLayout>