<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:id="@+id/titleView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/transactionTitle"
        android:textAlignment="center"
        android:textSize="22dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center_horizontal" />

    <ImageView
        android:id="@+id/dolar"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/ic_baseline_attach_money_48"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleView" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dolar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/nameView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="48dp"
                    android:layout_marginLeft="48dp"
                    android:text="@string/editNaslovTv"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/naslovView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="36dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/border_large"
                    android:hint="@string/editNaslovEt"
                    android:inputType="text"
                    android:selectAllOnFocus="true"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@id/nameView"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/edit_profile_Surname_Tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/editKolicinaTv"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="@id/naslovView"
                    app:layout_constraintTop_toBottomOf="@id/naslovView" />

                <TextView
                    android:id="@+id/valueView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/border_large"
                    android:inputType="text"
                    android:selectAllOnFocus="true"
                    android:textSize="20sp"
                    android:hint="@string/editKolicinaEt"
                    app:layout_constraintEnd_toEndOf="@+id/edit_profile_Name_Et"
                    app:layout_constraintStart_toStartOf="@+id/edit_profile_Surname_Tv"
                    app:layout_constraintTop_toBottomOf="@id/edit_profile_Surname_Tv" />

                <TextView
                    android:id="@+id/edit_profile_Hospital_Tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/editOpisTv"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="@id/valueView"
                    app:layout_constraintTop_toBottomOf="@id/valueView" />

                <TextView
                    android:id="@+id/descriptionView"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/border_large"
                    android:inputType="text"
                    android:layout_marginRight="48dp"
                    android:layout_marginLeft="48dp"

                    android:selectAllOnFocus="true"
                    android:textSize="20sp"
                    android:hint="@string/editOpisEt"
                    app:layout_constraintEnd_toEndOf="@+id/edit_profile_Surname_Et"
                    app:layout_constraintStart_toStartOf="@+id/edit_profile_Hospital_Tv"
                    app:layout_constraintTop_toBottomOf="@id/edit_profile_Hospital_Tv" />
            </androidx.constraintlayout.widget.ConstraintLayout>



        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>