<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/profile_Info_Tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/profileTitle"
        android:textSize="22dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/profile_ProfileImage_Iv"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/ic_baseline_attach_money_48"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_Info_Tv"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_ProfileImage_Iv">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/imeprofile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@string/profileIme"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/imeTVprofile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="150dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/imeprofile" />

                <TextView
                    android:id="@+id/prezimeprofile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profilePrezime"
                    android:textSize="20sp"
                    android:layout_marginTop="25dp"
                    app:layout_constraintStart_toStartOf="@id/imeprofile"
                    app:layout_constraintTop_toBottomOf="@id/imeprofile" />

                <TextView
                    android:id="@+id/prezimeeTVprofile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/prezimeprofile"
                    android:layout_marginRight="150dp"/>


                <TextView
                    android:id="@+id/bankaprofile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/profileBanka"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="@id/prezimeprofile"
                    app:layout_constraintTop_toBottomOf="@id/prezimeprofile"
                    />

                <TextView
                    android:id="@+id/bankaTVprofile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/bankaprofile"
                    android:layout_marginRight="150dp"


                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/izmeniEdit"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="45dp"
                android:layout_marginBottom="24dp"
                android:text="@string/profileIzmeniBtn"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/odjavaEdit"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="45dp"
                android:layout_marginBottom="24dp"
                android:text="@string/profileOdjavaBtn"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>